# aoc-2023

./: .gitignore  README.md  aoc_2023.opam  dune-project
lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day13.ml  day14.ml  day15.ml  day16.ml  day19.ml  day20.ml  day21.ml  day23.ml  day24.ml  dune  utils.ml
test/: dune  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml  test_day05.ml  test_day06.ml  test_day07.ml  test_day08.ml  test_day09.ml  test_day10.ml  test_day11.ml  test_day13.ml  test_day15.ml  test_day16.ml  test_day23.ml  test_day24.ml  test_utils.ml
